[package]
name = "rust-libp2p-ping"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53.1", features = [
  "async-std",
  "dns",
  "macros",
  "noise",
  "ping",
  "tcp",
  "tls",
  "websocket",
  "yamux",
] }
futures = "0.3.29"
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { version = "0.1.40" }
